<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_planner_util</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="o.m.degroot@tudelft.nl">Oscar de Groot</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mpc_planner_types</depend>
  <depend>ros_tools</depend>
  <depend>roslib</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
